# EPC611_high_speed_camera

./: .gitignore  README.txt  notes.txt  todo.txt
EPC611_interface_code/: EPC611_interface_code.ino
c_mount/: c_mount.scad  c_mount.stl
focus_jig/: focus_jig.scad  focus_jig.stl
host_code/: Cargo.toml  notes.txt
host_code/src/: main.rs  timed_tracker.rs
pcb/EPC611_breakout/: EPC611_breakout.kicad_pcb  EPC611_breakout.kicad_prl  EPC611_breakout.kicad_pro  EPC611_breakout.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/Pico_FT232H_pair/: Pico_FT232H_pair.kicad_pcb  Pico_FT232H_pair.kicad_prl  Pico_FT232H_pair.kicad_pro  Pico_FT232H_pair.kicad_sch  README.txt  eeprom.kicad_sch  fp-info-cache  usb_micro_b.kicad_sch
pcb/part_epc611/: epc611.kicad_sym
pcb/part_epc611/epc611.pretty/: EPC611_CSP-24.kicad_mod
s_mount/: README.txt  eps611_breakout_s_mount.stl  get_deps.sh  s_mount.scad
