[package]
name = "host_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftdi = "0.1.3"
serialport = "4.2.2"
eframe = "0.22.0"
portable-atomic = { version = "1.4.3", features = ["float"] }

image = "0.24.7"
env_logger = "0.10"
rand = "0.8.5"